--- a/client/src/app/components/work/work.component.scss
+++ b/client/src/app/components/work/work.component.scss
@@ -43,6 +43,14 @@
 //     border: none;
 // }
 
+/*** Form Icon Button ***/
+.icon-btn
+{
+    top: 5px;
+    right:5px;
+    cursor: pointer;
+    z-index: 999;
+}
 .datetime-font-size
 {
     font-size: .8em;
