--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -19,10 +19,11 @@
       </tr>
     </thead>
     <tbody>
+    <tbody *ngFor="let item of result_List; let i = index"
+      [ngClass]="{'table-selected': item?.e_Id == fb_Value_Index[0]}" (click)="user.lv == 3 && choose(item)">
       <!-- <tr *ngFor="let item of result_Async$ | async; index as i" [ngClass]="{'text-light bg-dark': item?.e_Id == fb_Value['e_Id'].value}" (click)="choose(item)"> -->
-      <tr align="center" *ngFor="let item of result_List; let i = index"
-        [ngClass]="{'text-light bg-secondary': item?.e_Id == fb_Value_Index[0]}" (click)="choose(item)">
-        <td>{{ i+1 }}</td>
+      <tr>
+        <td [class.suspension]="item.e_Lv == '0'">{{ i+1 }}</td>
         <td>{{ item.e_Name }}</td>
         <td>{{ item.e_Email }}</td>
         <td>{{ item.e_JobNumber }}</td>
@@ -37,7 +38,6 @@
           <span>
             {{ item.e_Date | splite:3 }}月
           </span>
-
         </td>
       </tr>
     </tbody>
@@ -47,9 +47,8 @@
 
 <!-- Pagination -->
 <div class="d-flex justify-content-center pagination pagination-sm">
-  <ngb-pagination [collectionSize]="result_Data.length" [(page)]="page" [pageSize]="pageSize"
-    (pageChange)="refreshResult_List()">
-  </ngb-pagination>
+  <ngb-pagination [collectionSize]="result_Data.length" [(page)]="page" [pageSize]="10" [maxSize]="100" [rotate]="true"
+    [boundaryLinks]="true" (pageChange)="refreshResult_List()"></ngb-pagination>
 </div>
 <!-- /Pagination -->
 
@@ -95,9 +94,9 @@
         <label for="passWord" class="col-3 col-form-label text-danger">{{ errorValidators['e_PassWord'] }}</label>
       </ng-template>
 
-      <div class="col">
+      <div class="col" [class.pr-1]="!fb_Value_Index[0]">
         <div class="input-group input-group-md">
-          <input [type]="'password'" id="passWord" class="form-control" formControlName="e_PassWord" placeholder="密碼"
+          <input type="password" id="passWord" class="form-control" formControlName="e_PassWord" placeholder="密碼"
             (blur)="inputValidators(fbGroup, 'e_PassWord')" autocomplete="false" #passWord_Type>
 
           <div class="input-group-prepend">
@@ -108,29 +107,25 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <ng-container *ngIf="!fb_Value_Index[0]">
-      <!-- ConfirmPassword -->
-      <div class="form-group row">
+      <ng-container *ngIf="!fb_Value_Index[0]">
+        <!-- ConfirmPassword -->
+        <div class="col pl-1">
+          <div class="input-group input-group-md">
+            <input type="password" class="form-control" formControlName="e_ConfirmPassword" placeholder="確認密碼"
+              (blur)="inputValidators(fbGroup, 'e_ConfirmPassword')" autocomplete="false" #e_ConfirmPassword_Type>
 
-        <label for="confirmPassword" class="col-3 col-form-label"
-          *ngIf="!errorValidators['e_ConfirmPassword'].length; else e_ConfirmPassword">
-          確認密碼
-        </label>
-
-        <ng-template #e_ConfirmPassword>
-          <label for="confirmPassword" class="col-3 col-form-label text-danger">
-            <span class="text-danger h6">{{ errorValidators['e_ConfirmPassword'] }}</span>
-          </label>
-        </ng-template>
-
-        <div class="col">
-          <input type="password" id="confirmPassword" class="form-control" formControlName="e_ConfirmPassword"
-            placeholder="確認密碼" (blur)="inputValidators(fbGroup, 'e_ConfirmPassword')" autocomplete="false">
+            <div class="input-group-prepend">
+              <span class="input-group-text"
+                (click)="e_ConfirmPassword_Type.type == 'text' ? e_ConfirmPassword_Type.type = 'password': e_ConfirmPassword_Type.type = 'text'">
+                <i
+                  [ngClass]="{'bi bi-eye-slash-fill': e_ConfirmPassword_Type.type != 'password', 'bi bi-eye-fill': e_ConfirmPassword_Type.type == 'password', 'text-danger': errorValidators['e_ConfirmPassword'].length}"></i>
+              </span>
+            </div>
+          </div>
         </div>
-      </div>
-    </ng-container>
+      </ng-container>
+    </div>
 
     <!-- Email -->
     <div class="form-group row">
@@ -157,45 +152,38 @@
       </div>
       <div class="col-6">
         <select id="lv" class="form-control text-center custom-select" formControlName="e_Lv">
+          <ng-container *ngIf="user.lv == 3">
+            <option value="0" [selected]="fb_Value['e_Lv'].value == 0">
+              停權
+            </option>
+          </ng-container>
           <option value="1" [selected]="fb_Value['e_Lv'].value == 1">
             普通
           </option>
           <option value="2" [selected]="fb_Value['e_Lv'].value == 2">
             中級
           </option>
-          <option value="3" [selected]="fb_Value['e_Lv'].value == 3">
-            高級
-          </option>
+          <ng-container *ngIf="user.lv == 3">
+            <option value="3" [selected]="fb_Value['e_Lv'].value == 3">
+              高級
+            </option>
+          </ng-container>
         </select>
       </div>
 
     </div>
     <!-- Date Start-->
     <div class="form-group row" formArrayName="e_Date">
-      <label for="Sdate" class="col-3 col-form-label"
-        *ngIf="!errorValidators['e_Date'][0].length; else Sdate">入職</label>
-
-      <ng-template #Sdate>
-        <label for="Sdate" class="col-3 col-form-label text-danger">{{ errorValidators['e_Date'][0] }}</label>
-      </ng-template>
-
+      <label for="Sdate" class="col-3 col-form-label">入職</label>
       <div class="col">
         <input type="date" id="Sdate" class="form-control" formControlName="0" (input)="onDate($event.target)"
           (blur)="inputValidators(fbGroup, 'e_Date', 0)">
-        <!-- <input type="datetime-local" id="SbMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm" [value]="onValue('SbMinute')" (input)="onDate($event.target)"> -->
       </div>
     </div>
 
     <!-- Date End-->
     <div class="form-group row" formArrayName="e_Date">
-      <label for="Edate" class="col-3 col-form-label"
-        *ngIf="!errorValidators['e_Date'][0].length; else Edate">入職</label>
-
-      <ng-template #Edate>
-        <label for="Edate" class="col-3 col-form-label text-danger">{{ errorValidators['e_Date'][1] }}</label>
-      </ng-template>
-
+      <label for="Edate" class="col-3 col-form-label">在職</label>
       <div class="col">
         <input type="date" id="Edate" class="form-control" formControlName="1" (input)="onDate($event.target)"
           (blur)="inputValidators(fbGroup, 'e_Date', 1)">
