--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -33,10 +33,157 @@
                     <span class="p-1">{{ user.jNumber }}</span>
                 </a>
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="shadow header_DropMenu bg-dark">
-                    <button ngbDropdownItem class="text-center">{{ user.name }}</button>
+                    <button ngbDropdownItem class="text-center mb-3" (click)="update()">{{ user.name }}</button>
                     <button ngbDropdownItem class="text-center" (click)="logout()">登出</button>
                 </div>
             </div>
         </li>
     </ul>
 </div>
+
+<ng-template #form_>
+    <!-- Form -->
+    <form [formGroup]="fbGroup" #form="ngForm">
+      <!-- Name -->
+      <div class="form-group row">
+        <label for="name" class="col-3 col-form-label" *ngIf="!errorValidators['e_Name'].length; else e_Name">姓名</label>
+  
+        <ng-template #e_Name>
+          <label for="name" class="col-3 col-form-label text-danger">{{ errorValidators['e_Name'] }}</label>
+        </ng-template>
+  
+        <div class="col">
+          <input type="text" id="name" class="form-control" formControlName="e_Name" placeholder="姓名"
+            (blur)="inputValidators(fbGroup, 'e_Name')">
+        </div>
+      </div>
+  
+      <!-- Job Number -->
+      <div class="form-group row">
+        <label for="jobNumber" class="col-3 col-form-label"
+          *ngIf="!errorValidators['e_JobNumber'].length; else e_JobNumber">工號</label>
+  
+        <ng-template #e_JobNumber>
+          <label for="jobNumber" class="col-3 col-form-label text-danger">{{ errorValidators['e_JobNumber']
+            }}</label>
+        </ng-template>
+  
+        <div class="col">
+          <input type="text" id="jobNumber" class="form-control" formControlName="e_JobNumber" placeholder="工號"
+            (blur)="inputValidators(fbGroup, 'e_JobNumber')" [readonly]="user.lv < 3">
+        </div>
+      </div>
+  
+      <!-- Password -->
+      <div class="form-group row">
+        <label for="passWord" class="col-3 col-form-label"
+          *ngIf="!errorValidators['e_PassWord'].length; else e_PassWord">密碼</label>
+  
+        <ng-template #e_PassWord>
+          <label for="passWord" class="col-3 col-form-label text-danger">{{ errorValidators['e_PassWord'] }}</label>
+        </ng-template>
+  
+        <div class="col" [class.pr-1]="!fb_Value_Index[0]">
+          <div class="input-group input-group-md">
+            <input type="password" id="passWord" class="form-control" formControlName="e_PassWord" placeholder="密碼"
+              (blur)="inputValidators(fbGroup, 'e_PassWord')" autocomplete="false" #passWord_Type>
+  
+            <div class="input-group-prepend">
+              <span class="input-group-text"
+                (click)="passWord_Type.type == 'text' ? passWord_Type.type = 'password': passWord_Type.type = 'text'">
+                <i [ngClass]="passWord_Type.type == 'password' ? 'bi bi-eye-slash-fill' : 'bi bi-eye-fill'"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+  
+        <ng-container *ngIf="!fb_Value_Index[0]">
+          <!-- ConfirmPassword -->
+          <div class="col pl-1">
+            <div class="input-group input-group-md">
+              <input type="password" class="form-control" formControlName="e_ConfirmPassword" placeholder="確認密碼"
+                (blur)="inputValidators(fbGroup, 'e_ConfirmPassword')" autocomplete="false" #e_ConfirmPassword_Type>
+  
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  (click)="e_ConfirmPassword_Type.type == 'text' ? e_ConfirmPassword_Type.type = 'password': e_ConfirmPassword_Type.type = 'text'">
+                  <i
+                    [ngClass]="{'bi bi-eye-slash-fill': e_ConfirmPassword_Type.type != 'password', 'bi bi-eye-fill': e_ConfirmPassword_Type.type == 'password', 'text-danger': errorValidators['e_ConfirmPassword'].length}"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+  
+      <!-- Email -->
+      <div class="form-group row">
+        <label for="email" class="col-3 col-form-label"
+          *ngIf="!errorValidators['e_Email'].length; else e_Email">信箱</label>
+  
+        <ng-template #e_Email>
+          <label for="email" class="col-3 col-form-label text-danger">{{ errorValidators['e_Email']
+            }}</label>
+        </ng-template>
+  
+        <div class="col">
+          <input type="email" id="email" class="form-control" formControlName="e_Email" placeholder="信箱"
+            (blur)="inputValidators(fbGroup, 'e_Email')">
+        </div>
+      </div>
+  
+      <!-- Level -->
+      <div class="form-group row">
+        <label for="lv" class="col-3 col-form-label">權限</label>
+        <div class="col-3">
+          <ngb-rating [rate]="fb_Value['e_Lv'].value" readonly="true" class="h4"></ngb-rating>
+        </div>
+        <div class="col-6">
+          <select id="lv" class="form-control text-center custom-select" formControlName="e_Lv">
+            <ng-container *ngIf="user.lv == 3">
+              <option value="0" [selected]="fb_Value['e_Lv'].value == 0">
+                停權
+              </option>
+            </ng-container>
+            <option value="1" [selected]="fb_Value['e_Lv'].value == 1">
+              普通
+            </option>
+            <option value="2" [selected]="fb_Value['e_Lv'].value == 2">
+              中級
+            </option>
+            <ng-container *ngIf="user.lv == 3">
+              <option value="3" [selected]="fb_Value['e_Lv'].value == 3">
+                高級
+              </option>
+            </ng-container>
+          </select>
+        </div>
+  
+      </div>
+      <!-- Date Start-->
+      <div class="form-group row" formArrayName="e_Date">
+        <label for="Sdate" class="col-3 col-form-label">入職</label>
+        <div class="col">
+          <input type="date" id="Sdate" class="form-control" formControlName="0" (input)="onDate($event.target)"
+            (blur)="inputValidators(fbGroup, 'e_Date', 0)">
+        </div>
+      </div>
+  
+      <!-- Date End-->
+      <div class="form-group row" formArrayName="e_Date">
+        <label for="Edate" class="col-3 col-form-label">在職</label>
+        <div class="col">
+          <input type="date" id="Edate" class="form-control" formControlName="1" (input)="onDate($event.target)"
+            (blur)="inputValidators(fbGroup, 'e_Date', 1)">
+        </div>
+      </div>
+      <!-- <div class="mb-2">
+        <label for="dateOfBirth">權限</label>
+        <div class="input-group">
+          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
+          <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+        </div>
+      </div> -->
+    </form>
+    <!-- /Form -->
+  </ng-template>
