--- a/client/src/app/components/content-header/content-header.component.html
+++ b/client/src/app/components/content-header/content-header.component.html
@@ -19,7 +19,7 @@
     <!-- Crud Btns -->
     <ng-container *ngIf="fbGroup != null">
       <div class="col-md-5 col-sm-12 d-flex justify-content-between">
-        <ng-container *ngIf="user.e_Lv > 1">
+        <ng-container *ngIf="check_Lv">
           <div class="col text-center">
             <button type="button" class="btn btn-outline-info btn-sm" (click)="create()">新增</button>
           </div>
