--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -126,8 +126,53 @@ table td.suspension::before
   /*** table ***/
   table
   {
-    font-size: .6rem; // 10px
+    position: relative;
+    display: inline-flex;
+    // flex-direction: row;
+    font-size: .8rem; // 10px
   }
+  /*** Table Selected ***/
+  tbody.table-selected tr,
+  tbody.table-selected td
+  {
+    border: 1px solid var(--dark-color) !important;
+  }
+  table thead tr
+  {
+    position: fixed;
+    z-index: 99;
+    left: 0;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    width: 40px !important; 
+  }
+  table tbody tr td
+  {
+    display: flex;
+    flex-direction: row;
+    margin: 4px 2px 4px 2px;
+  }
+  table tbody:nth-child(2)
+  {
+    margin-left: 30px;
+  }
+  /*** Table Suspension Style ***/
+  table td.suspension::before 
+  {
+    left: -150px;
+    transform: rotate(65deg);
+    height: 10px;
+    width: 70vw;
+    // transform: rotate(25deg);
+  }
+
+
+
+
+
+
+
   /*** pagination ***/
   .pagination .page-item .page-link
   {
